# Agentic-Compiler

./: .gitignore  README.md  pyproject.toml  requirements.txt
benchmarks/: 01_off_by_one.py  02_divide_by_zero.py  03_index_error.py  04_value_error.py  05_null_pointer.py  06_logic_error.py  07_type_error.py  08_key_error.py  09_negative_input.py  10_boundary_logic.py
skills/sentinel/: SKILL.md
src/: brain.py  distiller.py  guard.py  main.py
tests/: test_sentinel.py
