[project]
name = "sentinel"
version = "0.1.0"
description = "A local-first coding assistant using semantic context distillation and symbolic logic verification."
authors = [
    { name = "User", email = "user@example.com" }
]
dependencies = [
    "ollama",
    "sentence-transformers",
    "z3-solver",
    "chromadb",
    "pydantic"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
